Some more classes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Todo</string>
 
+    <string name="todo_list_error_message">Opsss... An error has occurred. Please try again :)</string>
+
     <string-array name="options">
         <item>ToDos</item>
         <item>Shopping</item>
